--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "author": "kkeisuke",
   "devDependencies": {
-    "vuepress": "^0.8.3"
+    "vuepress": "^0.14.10",
+    "webpack-dev-middleware": "3.6.0"
   }
 }
