--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
-    "@vuepress/plugin-back-to-top": "^1.2.0",
-    "vuepress": "^1.2.0",
-    "webpack-dev-middleware": "3.7.2"
+    "@vuepress/plugin-back-to-top": "^1.3.0",
+    "vuepress": "^1.3.0"
   }
 }
