--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.8.2",
+    "textlint": "^12.0.2",
+    "textlint-rule-preset-ja-technical-writing": "^7.0.0",
+    "textlint-rule-preset-jtf-style": "^2.3.12",
     "vuepress": "^1.8.2",
     "vuepress-plugin-smooth-scroll": "0.0.10"
   }
