--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "textlint": "^12.1.1",
     "textlint-rule-preset-ja-technical-writing": "^7.0.0",
-    "textlint-rule-preset-jtf-style": "^2.3.12"
+    "textlint-rule-preset-jtf-style": "^2.3.12",
+    "vitepress": "^0.22.4"
   }
 }
