--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kkeisuke.com",
   "author": "kkeisuke",
   "scripts": {
-    "docs:dev": "vitepress dev docs",
+    "docs:dev": "vitepress dev docs --host",
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs --port 8080"
   },
